chore: install daisyui, date-fns, heroicons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,17 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+.page {
+  @apply bg-white my-6 px-6 py-8 rounded-lg h-screen
+}
+
+.text-field {
+  @apply shadow-sm rounded-md w-full px-3 py-2 border border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500
+}
